# SectionIQ

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FRD.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: public_corpus_manifest.json  public_tm_queries.jsonl
docs/: benchmarking.md
examples/: test_manual.py
scripts/: benchmark_vs_pageindex.py  check_confidential_refs.py  prepare_public_corpus.py  run_benchmark.py
src/sectioniq/: __init__.py  backends.py  benchmarks.py  indexing.py  ingest.py  models.py  preprocess.py  retrieval.py  sdk.py  storage.py  utils.py
src/structured_pdf_rag/: __init__.py  backends.py  benchmarks.py  indexing.py  ingest.py  models.py  preprocess.py  retrieval.py  sdk.py  storage.py  utils.py
tests/: test_ingest_and_search.py
