[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sectioniq"
version = "0.1.0"
description = "Structured PDF retrieval with typed evidence blocks, hybrid search, and grounded citations."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "numpy>=1.26",
  "openai>=1.0.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
bench = [
  "PyPDF2>=3.0.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
