[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sectioniq"
version = "0.1.0a1"
description = "Structured PDF retrieval with typed evidence blocks, hybrid search, and grounded citations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["pdf", "rag", "retrieval", "bm25", "embeddings", "citations"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "numpy>=1.26",
  "openai>=1.0.0",
  "pypdf>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Vedant-Ratn-Nema/SectionIQ"
Repository = "https://github.com/Vedant-Ratn-Nema/SectionIQ"
Issues = "https://github.com/Vedant-Ratn-Nema/SectionIQ/issues"
Changelog = "https://github.com/Vedant-Ratn-Nema/SectionIQ/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "twine>=5.0.0",
]
bench = [
  "PyPDF2>=3.0.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
